fix overflow with float element in VE area

--- a/style/style.css
+++ b/style/style.css
@@ -29,3 +29,9 @@
 	width:600px;
 	margin:0 auto;
 }
+
+.ve-ce-documentNode:after {
+	content:"";
+	display:table;
+	clear:both;
+}
